[package]
name = "only_in_dreams"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
regex = "1.7.1"
primal = "0.3.2"
dotenv = "0.15.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "json", "cookies"] }
